# rumatui

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md
.github/: FUNDING.yml
matrix-rust-sdk/src/: async_client.rs  lib.rs
rumatui-tui/: .gitignore  Cargo.toml
rumatui-tui/src/: buffer.rs  layout.rs  lib.rs  terminal.rs
rumatui-tui/src/backend/: crossterm.rs  curses.rs  termion.rs
rumatui-tui/src/widgets/: barchart.rs  block.rs  chart.rs  gauge.rs  list.rs  mod.rs  paragraph.rs  reflow.rs  scroll.rs  sparkline.rs  table.rs  tabs.rs
rumatui-tui/src/widgets/canvas/: mod.rs
rumatui-tui/tests/: block.rs  chart.rs  gauge.rs  paragraph.rs  size.rs  table.rs
src/: app.rs  client_loop.rs  config.rs  error.rs  ev_loop.rs  event.rs  log.rs  main.rs  ui_loop.rs  ux.rs
src/client/: client_loop.rs  event_stream.rs  mod.rs
src/client/ruma_ext/: auth.rs  message.rs  mod.rs  reaction.rs
src/widgets/: app.rs  chat.rs  error.rs  login.rs  messages.rs  mod.rs  msgs.rs  register.rs  room_search.rs  rooms.rs  utils.rs
src/widgets/message/: ctrl_char.rs  line.rs  list.rs  mod.rs  msgs.rs
