[package]
name = "rumatui"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Command line todo in Rust."
repository = "https://github.com/DevinR528/forget"
keywords = ["todo", "cli", "productivity", "console", "terminal"]
categories = ["development-tools"]
edition = "2018"
readme = "README.md"
exclude = [ "resources" ]

[dependencies]
async-trait = "0.1.30"
anyhow = "1.0.28"
chrono = "0.4"
comrak = "0.7.0"
crossbeam-channel = "0.4.2"
either = "1.5.3"
failure = "0.1.7"
futures-core = "0.3.4"
futures-util = "0.3.4"
itertools = "0.9.0"
js_int = "0.1.4"
lazy_static = "1.4.0"
# matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk/" }
matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk/", branch = "tombstone" }
# matrix-sdk = { path = "../__forks__/matrix-rust-sdk" }
mdcat = "0.15"
muncher = "0.6.0"
regex = "1.3.6"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
termion = "1.5.5"
tokio = { version = "0.2.13", features = ["macros", "rt-threaded", "sync"] }
# tui = { git = "https://github.com/fdehau/tui-rs/" }
tui = { git = "https://github.com/DevinR528/tui-rs/", branch = "tail-scroll" }
unicode-width = "0.1.7"
unicode-segmentation = "1.6.0"
url = "2.1.1"
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.pulldown-cmark]
version = "^0.7"
default-features = false
features = ['simd']

[dependencies.syntect]
# onig rust fails to build w/o clang currently so pin syntect,
# see <https://github.com/rust-onig/rust-onig/issues/109> and GH-90
version = "^3, <3.2"
default-features = false
features = ["parsing", "assets", "dump-load"]
