[package]
name = "rumatui"
version = "0.1.16"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A click-able command-line Matrix client."
repository = "https://github.com/DevinR528/rumatui"
keywords = ["chat", "matrix", "ruma", "matrix-rust-sdk", "tui"]
categories = ["command-line-utilities"]
edition = "2018"
readme = "README.md"
# at some point exclude this ??
# exclude = ["resources"] 

[dependencies]
async-trait = "0.1.30"
chrono = "0.4"
comrak = "0.7.0"
crossbeam-channel = "0.4.2"
dirs = "2.0.2"
failure = "0.1.7"
itertools = "0.9.0"
js_int = "0.1.5"
lazy_static = "1.4.0"

# matrix-sdk = "0.1.0"
# matrix-sdk-base = { version = "0.1.0", features = ["messages"] }

matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk", branch = "ruma22" }
# matrix-sdk = { path = "../__forks__/matrix-rust-sdk/matrix_sdk" }

mdcat = "0.18.2"
muncher = "0.6.1"
regex = "1.3.9"
# depend on the same version matrix-sdk depends on
ruma-api = { git = "https://github.com/DevinR528/ruma", branch = "field-access" }

serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.52"
termion = "1.5.5"
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "sync"] }
# crates.io published fork of tui
rumatui-tui = "0.8.1"

webbrowser = "0.5.2"
url = "2.1.1"
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.pulldown-cmark]
version = "0.7.1"
default-features = false
features = ['simd']

[dependencies.syntect]
# onig rust fails to build w/o clang currently so pin syntect,
# see <https://github.com/rust-onig/rust-onig/issues/109> and GH-90
version = "4.1.1"
default-features = false
features = ["parsing", "assets", "dump-load"]

[workspace]
members = ["rumatui-tui"]
